--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,7 @@ table {
   margin-right: 20px;
   background-color: rgba(227, 225, 233, 0.3);
 }
+
+p span{
+  font-family: 'Courier New', Courier, monospace;
+}
